--- a/App_GlobalResources/Resource.tr-TR.resx
+++ b/App_GlobalResources/Resource.tr-TR.resx
@@ -283,7 +283,7 @@
 <value>İşlemler</value>
 </data>
 <data name="lblYeniBirDokumanEkle" xml:space="preserve">
-<value>Yeni Bir Döküman Ekle</value>
+<value>Dosya Yükle</value>
 </data>
 <data name="lblDerseYeniBirDokumanEkle" xml:space="preserve">
 <value>Derse Yeni Bir Döküman Ekle</value>
