--- a/App_GlobalResources/Resource.resx
+++ b/App_GlobalResources/Resource.resx
@@ -284,7 +284,7 @@
 <value>Actions</value>
 </data>
 <data name="lblYeniBirDokumanEkle" xml:space="preserve">
-<value>Add a File</value>
+<value>Upload File</value>
 </data>
 <data name="lblDerseYeniBirDokumanEkle" xml:space="preserve">
 <value>Add a New File to the Course</value>
