--- a/App_GlobalResources/Resource.tr-TR.resx
+++ b/App_GlobalResources/Resource.tr-TR.resx
@@ -505,7 +505,7 @@
 <value>Dosya Ayarları</value>
 </data>
 <data name="lblDosyalar" xml:space="preserve">
-<value>Dosyalar</value>
+<value>Bulut Disk</value>
 </data>
 <data name="lblOdevlerleGonderilenler" xml:space="preserve">
 <value>Ödevlerle Gönderilenler</value>
