--- a/App_GlobalResources/Resource.resx
+++ b/App_GlobalResources/Resource.resx
@@ -221,7 +221,7 @@
 <value>Course Settings</value>
 </data>
 <data name="lblDersPanosu" xml:space="preserve">
-<value>Course Board</value>
+<value>Notice Board</value>
 </data>
 <data name="lblDersSayfasinaGit" xml:space="preserve">
 <value>Go to Course Page</value>
