--- a/App_GlobalResources/Resource.tr-TR.resx
+++ b/App_GlobalResources/Resource.tr-TR.resx
@@ -220,7 +220,7 @@
 <value>Ders Ayarları</value>
 </data>
 <data name="lblDersPanosu" xml:space="preserve">
-<value>Ders Panosu</value>
+<value>Duyuru Panosu</value>
 </data>
 <data name="lblDersSayfasinaGit" xml:space="preserve">
 <value>Ders Sayfasına Git</value>
