--- a/App_GlobalResources/Resource.tr-TR.resx
+++ b/App_GlobalResources/Resource.tr-TR.resx
@@ -238,16 +238,16 @@
 <value>Aramak istediğiniz kişi yada dersle ilgili bir kaç kelime girin</value>
 </data>
 <data name="msgBuDersiTakipEdiyorsunuz" xml:space="preserve">
-<value>Bu dersi takip ediyorsunuz</value>
+<value>Bu ders sayfasını takip ediyorsunuz</value>
 </data>
 <data name="msgBuDersiTakipEtmekIcinOnayGerekiyor" xml:space="preserve">
-<value>Bu dersi takip etmek için ders sorumlusunun onayı gerekmektedir.</value>
+<value>Bu ders sayfasını takip etmek için ders sorumlusunun onayı gerekmektedir.</value>
 </data>
 <data name="msgBuDersiTakipEtmekIcinSorumluyaBasvur" xml:space="preserve">
-<value>Bu dersi takip etmek için lütfen ders sorumlusuna başvurun</value>
+<value>Bu ders sayfasını takip etmek için lütfen ders sorumlusuna başvurun</value>
 </data>
 <data name="msgBuDersiZatenTakipEdiyorsunuz" xml:space="preserve">
-<value>Bu dersi zaten takip ediyorsunuz</value>
+<value>Bu ders sayfasını zaten takip ediyorsunuz</value>
 </data>
 <data name="msgBuKullaniciHesabiAskiyaAlinmis" xml:space="preserve">
 <value>Bu kullanıcı hesabı sistem yöneticisi tarafından askıya alındı</value>
@@ -355,7 +355,7 @@
 <value>Son Teslim Tarihine Göre Otomatik</value>
 </data>
 <data name="lblDerseGozat" xml:space="preserve">
-<value>Derse Gözat</value>
+<value>Ders Sayfasına Git</value>
 </data>
 <data name="lblDersSorumlusuOnayi" xml:space="preserve">
 <value>Ders Sorumlusunun Onayı İle</value>
@@ -382,7 +382,7 @@
 <value>Dersin mesajlaşma kanalına gitmek için buraya tıklayın</value>
 </data>
 <data name="msgDersiTakipIcinTikla" xml:space="preserve">
-<value>Dersi takip etmek için aşağıdaki düğmeyi tıklayın</value>
+<value>Ders Sayfasını takip etmek için aşağıdaki düğmeyi tıklayın</value>
 </data>
 <data name="lblKapat" xml:space="preserve">
 <value>Kapat</value>
@@ -397,10 +397,10 @@
 <value>Verildiği Ders</value>
 </data>
 <data name="lblOgrenciErisimKodlari" xml:space="preserve">
-<value>Dersi Öğrenci Erişim Kodları</value>
+<value>Ders Sayfası Öğrenci Erişim Kodları</value>
 </data>
 <data name="lblDerseKabulSekli" xml:space="preserve">
-<value>Derse Kabül Şekli</value>
+<value>Ders Sayfasına Onay Şekli</value>
 </data>
 <data name="lblDersinAdi" xml:space="preserve">
 <value>Dersin Adı</value>
@@ -409,19 +409,19 @@
 <value>Dersin Durumu</value>
 </data>
 <data name="lblDersler" xml:space="preserve">
-<value>Dersler</value>
+<value>Ders Sayfaları</value>
 </data>
 <data name="lblVerildigiDersler" xml:space="preserve">
-<value>Verdiği Dersler</value>
+<value>Ders Sayfaları</value>
 </data>
 <data name="lblPaylasildigiDersler" xml:space="preserve">
-<value>Paylaşıldığı Dersler</value>
+<value>Paylaşıldığı Ders Sayfaları</value>
 </data>
 <data name="lblYeniBirKanalOlustur" xml:space="preserve">
 <value>Yeni Bir Kanal Oluştur</value>
 </data>
 <data name="lblYeniBirDersOlustur" xml:space="preserve">
-<value>Yeni Bir Ders Oluştur</value>
+<value>Yeni Bir Ders Sayfası Oluştur</value>
 </data>
 <data name="lblHesabiOlustur" xml:space="preserve">
 <value>Hesabı Oluştur</value>
@@ -526,10 +526,10 @@
 <value>Üst Barı Sabitle</value>
 </data>
 <data name="lblDersiTakipEt" xml:space="preserve">
-<value>Dersi Takip Et</value>
+<value>Ders Sayfasını Takip Et</value>
 </data>
 <data name="lblTakipEdilenDersler" xml:space="preserve">
-<value>Takip Edilen Dersler</value>
+<value>Takip Edilen Ders Sayfaları</value>
 </data>
 <data name="lblParolamiUnuttum" xml:space="preserve">
 <value>Parolamı Unuttum</value>
@@ -553,7 +553,7 @@
 <value>Haftalık Saat</value>
 </data>
 <data name="lblTakipEtmekIcinDersAramakIstiyorum" xml:space="preserve">
-<value>Takip Etmek İstediğim Dersi Aramak istiyorum</value>
+<value>Ders Sayfası Aramak istiyorum</value>
 </data>
 <data name="lblInceleveDegerlendir" xml:space="preserve">
 <value>İncele ve Değerlendir</value>
@@ -703,13 +703,13 @@
 <value>Kaldır</value>
 </data>
 <data name="lblDosyayiDerstenKaldir" xml:space="preserve">
-<value>Dosyayı Dersten Kaldır</value>
+<value>Dosyayı Ders Sayfasından Kaldır</value>
 </data>
 <data name="lblSeciliKisiIcinErisimIzniniKaldir" xml:space="preserve">
 <value>Seçili Kişi için Erişim İznini Kaldır</value>
 </data>
 <data name="lblTakipIcinDersAra" xml:space="preserve">
-<value>Takip Etmek için Ders Ara</value>
+<value>Ders Sayfası Ara</value>
 </data>
 <data name="lblDosyaBul" xml:space="preserve">
 <value>Dosya bul...</value>
@@ -763,7 +763,7 @@
 <value>Durum</value>
 </data>
 <data name="lblSeciliDersicinPaylasimiDurdur" xml:space="preserve">
-<value>Seçili Ders için Paylaşımı Durdur</value>
+<value>Seçili Ders Sayfası için Paylaşımı Durdur</value>
 </data>
 <data name="lblSeciliKisiicinPaylasimiDurdur" xml:space="preserve">
 <value>Seçili Kişi için Paylaşımı Durdur</value>
@@ -793,13 +793,13 @@
 <value>Soyad</value>
 </data>
 <data name="msgSistemdeSizeAitDersBulunamadi" xml:space="preserve">
-<value>Sistemde size ait bir ders bulunamadı. Yeni bir ders oluşturmak için Sol Menü'den</value>
+<value>Sistemde size ait bir ders sayfası bulunamadı. Yeni bir ders oluşturmak için Sol Menü'den</value>
 </data>
 <data name="msgErisimKodugirDugmeyeTikla" xml:space="preserve">
-<value>Öğrencilerin bu dersi takipleri, dersin sorumlusu tarafından verilen erişim kodları yardımıyla yapılmaktadır. Lütfen size verilen erişimi kodunu aşağıdaki alan girip Dersi Takip et düğmesine tıklayın.</value>
+<value>Öğrencilerin bu ders sayfasını takipleri, dersin sorumlusu tarafından verilen erişim kodları yardımıyla yapılmaktadır. Lütfen size verilen erişimi kodunu aşağıdaki alan girip Dersi Takip et düğmesine tıklayın.</value>
 </data>
 <data name="msgEklenecekDokumanileIlgiliKisaAciklamaGir" xml:space="preserve">
-<value>Eklenecek döküman ile ilgili kısa açıklamanızı bu alana girin...</value>
+<value>Paylaşılacak dosya ile ilgili kısa açıklamanızı bu alana girin...</value>
 </data>
 <data name="msgOdevIleilgiliKisaAciklamaGir" xml:space="preserve">
 <value>Ödev ile ilgili kısa açıklamanızı bu alana girin...</value>
@@ -811,13 +811,13 @@
 <value>Öğrenciye ödevle ilgili mesajınızı bu alana yazınız...</value>
 </data>
 <data name="msgPanoyaEklemekIstediginMesajiYaz" xml:space="preserve">
-<value>Panoya eklemek istediğiniz mesajı bu alana yazın...</value>
+<value>Panoya eklemek istediğiniz duyurunuzu bu alana yazın...</value>
 </data>
 <data name="lblTakibiBirak" xml:space="preserve">
 <value>Takibi Bırak</value>
 </data>
 <data name="lblDersiTakibiBirak" xml:space="preserve">
-<value>Dersi Takibi Bırak</value>
+<value>Ders Sayfasını Takip Etmeyi Bırak</value>
 </data>
 <data name="lblUniversite" xml:space="preserve">
 <value>Üniversite</value>
@@ -850,13 +850,13 @@
 <value>Evet</value>
 </data>
 <data name="msgSuandaBirDersiTakipEtmiyorsunuz" xml:space="preserve">
-<value>Şu anda herhangi bir dersi takip etmiyorsunuz.</value>
+<value>Şu anda herhangi bir ders sayfası takip etmiyorsunuz.</value>
 </data>
 <data name="msgDerseKatilmakIcinOgrenciOlmakGerekiyor" xml:space="preserve">
-<value>Derse katılabilmeniz için öğrenci olmanız gerekmektedir.</value>
+<value>Ders sayfasını takip edebilmek için öğrenci olmanız gerekmektedir.</value>
 </data>
 <data name="lblDersinde" xml:space="preserve">
-<value>dersinde</value>
+<value>ders sayfasında</value>
 </data>
 <data name="lblOdeviniGonderenler" xml:space="preserve">
 <value>Ödevini Gönderenler</value>
@@ -865,7 +865,7 @@
 <value>Ödevlerle Gönderilen Dökümanlar</value>
 </data>
 <data name="lblOgrencilerinDerseKabulSekli" xml:space="preserve">
-<value>Öğrencilerin Derse Kabül Şekli</value>
+<value>Öğrencilerin Derse Sayfasına Kabül Şekli</value>
 </data>
 
 <data name="msgKritereUygunKisiYok" xml:space="preserve">
@@ -873,7 +873,7 @@
  </data>
  
   <data name="msgKritereUygunDersYok" xml:space="preserve">
-         <value>Aradığınız kritere uygun ders bulunamadı</value>
+         <value>Aradığınız kritere uygun ders sayfası bulunamadı</value>
   </data>
 
        <data name="lblKisiSayfasinaGozat" xml:space="preserve">
@@ -897,7 +897,7 @@
   </data>
     
    <data name="lblBulunanDersler" xml:space="preserve">
-    <value>Bulunan Dersler</value>
+    <value>Bulunan Ders Sayfaları</value>
 </data>
 
  
@@ -954,11 +954,11 @@
 </data>
 
 <data name="msgDersBulunamadi" xml:space="preserve">
-    <value>Ders bulunamadı</value>
+    <value>Ders Sayfası bulunamadı</value>
 </data>
 
 <data name="msgDerseErisimEngellendi" xml:space="preserve">
-    <value>Derse olan erişim engellendi</value>
+    <value>Ders Sayfasına erişim engellendi</value>
 </data>
 
 <data name="msgBuSayfayaErismekIcinOgrenciOlunmali" xml:space="preserve">
@@ -966,7 +966,7 @@
 </data>
 
 <data name="msgDersErisimKoduBulunamadi" xml:space="preserve">
-    <value>Ders erişim kodu bulunamadı</value>
+    <value>Ders sayfası erişim kodu bulunamadı</value>
 </data>
 
 <data name="msgKanalBulunamadi" xml:space="preserve">
@@ -996,11 +996,11 @@
 </data>
 
     <data name="lblErisimKoduKullanarakDerseKatil" xml:space="preserve">
-    <value>Erişim Kodu Kullanarak Bir Derse Katıl</value>
+    <value>Erişim Kodu Kullanarak Bir Ders Sayfasına Katıl</value>
 </data>
 
   <data name="lblDersSil" xml:space="preserve">
-    <value>Dersi Sil</value>
+    <value>Ders Sayfasını Sil</value>
   </data>
 
 </root>
