--- a/App_GlobalResources/Resource.tr-TR.resx
+++ b/App_GlobalResources/Resource.tr-TR.resx
@@ -220,7 +220,7 @@
 <value>Ders Ayarları</value>
 </data>
 <data name="lblDersPanosu" xml:space="preserve">
-<value>Duyuru Panosu</value>
+<value>Ders Panosu</value>
 </data>
 <data name="lblDersSayfasinaGit" xml:space="preserve">
 <value>Ders Sayfasına Git</value>
@@ -811,7 +811,7 @@
 <value>Öğrenciye ödevle ilgili mesajınızı bu alana yazınız...</value>
 </data>
 <data name="msgPanoyaEklemekIstediginMesajiYaz" xml:space="preserve">
-<value>Panoya eklemek istediğiniz duyurunuzu bu alana yazın...</value>
+<value>Panoya eklemek istediğiniz mesajınızı bu alana yazın...</value>
 </data>
 <data name="lblTakibiBirak" xml:space="preserve">
 <value>Takibi Bırak</value>
